[fixes #291] User menu cutoff with short usernames
Add vim relic file gitignore entry for .sw[op] files
Upgrade return due to an uninitialized constant Listen uninitialized constant
Listen::MultiListener exception (see:
https://github.com/rails/spring/issues/145)

--- a/assets/styles/top.sass
+++ b/assets/styles/top.sass
@@ -46,6 +46,7 @@
       display: none
       position: absolute
       z-index: 300
+      right: 0px
       top: 55px
       width: 100%
       background-color: $color-bg-dropdown
